refactor: move data directory to root folder

--- a/plain-js/index.html
+++ b/plain-js/index.html
@@ -11,7 +11,7 @@
     <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
   </div>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script id="graph" type="text/javascript" src="data/graph.js"></script>
+  <script id="graph" type="text/javascript" src="../data/graph.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
     rel="stylesheet"
